-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.3.2, 6.4.1
-
None
-
seems doesn't depend on actual device or macOS version.
-
-
1309bac26 (dev), 67e97b0e6 (6.4), 36eead2ff (6.5)
ListView's items get hover while scrolling in Inactive window and behaviour seems completely broken. see attached video Screen Recording 2022-11-17 at 13.02.18.mov![]()
Sample code:
import QtQuick Window { width: 640 height: 480 visible: true ListView { id: view anchors.fill: parent model: 200 delegate: Rectangle { width: view.width height: 60 border.width: 1 color: hh.hovered ? 'blue' : 'white' HoverHandler { id: hh } } } }
Normally on macOS, app's controls shouldn't process hover at all in case of Inactive window, you can check this behaviour with e.g. native applications. Reproduced at least with macbook's touchpad, unfortunately I have no possibility to check with a mouse wheel. (reproduced with a mouse wheel as well).
- relates to
-
QTBUG-108601 Hover handling is broken for ListView's items in specific scenario
-
- Closed
-
| For Gerrit Dashboard: QTBUG-108600 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 448606,12 | QQDAPrivate::deliverUpdatedPoints: skip HoverHandlers if wheel event | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 449496,2 | QQDAPrivate::deliverUpdatedPoints: skip HoverHandlers if wheel event | 6.5 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 449497,2 | QQDAPrivate::deliverUpdatedPoints: skip HoverHandlers if wheel event | 6.4 | qt/qtdeclarative | Status: MERGED | +2 | 0 |