src/quick/util/qquickdeliveryagent_p_p.h
@@ -139,6 +139,7 @@ public:
     static bool anyPointGrabbed(const QPointerEvent *ev);
     static bool allPointsGrabbed(const QPointerEvent *ev);
     static bool isMouseEvent(const QPointerEvent *ev);
+    static bool isMouseOrWheelEvent(const QPointerEvent *ev);
     static bool isHoverEvent(const QPointerEvent *ev);
     static bool isTouchEvent(const QPointerEvent *ev);
     static bool isTabletEvent(const QPointerEvent *ev);
